--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+Version 0.2.0 (2020-07-09)
+--------------------------
+Integrate Synk (#15)
+Add Snyk credentials to .travis.yml (#16)
+Extend copyright notice to 2020 (#14)
+IPv6 Support (#8)
+Update Java version to 8 (#13)
+Fix Gradle version at 3.4.1 (#11)
+Fix deprecated Spring repository link (#9)
+
 Version 0.1.0 (2017-04-03)
 --------------------------
 Initial release
