--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Version 0.3.0 (2026-02-13)
+--------------------------
+Fix publishing (#23)
+Add support for custom user agent lists (#22)
+Modernize build infra (#21)
+
 Version 0.2.0 (2020-07-09)
 --------------------------
 Integrate Synk (#15)
