--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 0.3.1 (2026-02-13)
+--------------------------
+Bump commons-lang3 to 3.18.0 and assertj-core to 3.27.7 (#26)
+Fix Snyk workflow (#25)
+
 Version 0.3.0 (2026-02-13)
 --------------------------
 Fix publishing (#23)
